[package]
name = "vk-separate"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to remove Committer key from Verification key in Nova protocol"
license = "MIT"
repository = "https://github.com/radojevicMihailo/vk-separate"
keywords = ["zero-knowledge", "rust", "nova", "cli"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"