[package]
name = "vk-separate"
version = "0.3.0"
edition = "2021"
description = "A CLI tool to remove Committer key from Verification key in Nova protocol"
license = "MIT"
repository = "https://github.com/radojevicMihailo/vk-separate"
documentation = "https://docs.rs/vk-separate"
readme = "README.md"
keywords = ["zero-knowledge", "rust", "nova", "cli"]
authors = ["Your Name <radojevic.mihailo.00@gmail.com>"]
homepage = "https://github.com/radojevicMihailo/vk-separate"

[[bin]]
name = "json_processor"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

nova-snark = { git = "https://github.com/MVPWorkshop/Nova", branch = "public_fields", default-features = false }
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
